# tiquetaque-marker

./: .gitignore  README.md  main.py  pyproject.toml  start.bat
config/: config.py  logging.py  settings.toml  xpath.toml
src/: date_helper.py  notifier.py
src/selenium/: action_type.py  pipeline_automation.py
