[tool.poetry]
name = "tiquetaque-marker"
version = "0.1.0"
description = ""
authors = ["Alexandre Ferreira de Lima <alexandre.ferreira@liveecommerce.com.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.2.6"
selenium = "^4.25.0"
webdriver-manager = "^4.0.2"
winotify = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
